# policy-conformance

./: .gitignore  README.md  TODO.md  Taskfile.yml  find_trace_ids.go  sampling-bug-report.md
.github/workflows/: bot-signoff.yaml
implementations/edge/: config.template.json
implementations/sink/: go.mod  main.go
implementations/tero-collector-distro/: config.template.yaml
implementations/vector/: README.md  config.template.yaml
runners/go/: eval.go  go.mod  go.sum  main.go
runners/rs/: .tool-versions  Cargo.toml
runners/rs/src/: eval.rs  main.rs  otel.rs
runners/zig/: build.zig  build.zig.zon
scripts/: b64_to_hex.py
server/: go.mod  go.sum  main.go
testcases/compound_all_keep_types/: expected_1.json  expected_2.json  input_2.json  policies.json
testcases/compound_conflicting_keeps/: expected_1.json  expected_2.json  expected_stats.json  input_1.json  input_2.json  policies.json
testcases/compound_datapoint_attr_types/: expected_1.json  expected_stats.json  input_1.json  policies.json
testcases/compound_disabled_mixed/: expected_1.json  expected_2.json  expected_stats.json  input_1.json  input_2.json  policies.json
testcases/compound_double_negation/: expected_1.json  expected_stats.json  input_1.json  policies.json
testcases/compound_empty_vs_missing/: expected_2.json  expected_stats.json  input_1.json  input_2.json  policies.json
testcases/compound_many_policies_fanout/: expected_1.json  expected_2.json  expected_stats.json  input_1.json  input_2.json  policies.json
testcases/compound_mixed_signals/: expected_1.json  expected_2.json  (+6 more)
(+798 files in other folders)
