[package]
name = "runner-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
policy-rs = { version = "1.4.12", features = ["http", "grpc"] }
# policy-rs = { path = "../../../policy-rs", features = ["http", "grpc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
clap = { version = "4", features = ["derive"] }
